@@ -1,9 +1,10 @@
-/* $Id: ChangeLog 593 2006-11-24 20:55:01Z knut.osmundsen@oracle.com $ */
+/* $Id: ChangeLog 595 2006-11-25 02:16:39Z knut.osmundsen@oracle.com $ */
 
 2006-11-24:
     - kBuild/footer.kmk:
         o Fixed some issues with SDKS and linking.
     - kmk:
+        o Fixed bug in the sdk walking in kbuild_collect_source_prop.
         o Added --pretty-command-printing for simplifying makefile debugging.
 
 2006-11-23:
